--- a/Boilerplate.Web.App/Views/ProductSold/SaleView.cshtml
+++ b/Boilerplate.Web.App/Views/ProductSold/SaleView.cshtml
@@ -1,6 +1,9 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml"; ;
+}
+
 @{
-    ViewData["Title"] = "SaleView";
+    ViewData["Title"] = "Sales";
 }
 
 <h2>SaleView</h2>
