--- a/Boilerplate.Web.App/Views/Store/StoreView.cshtml
+++ b/Boilerplate.Web.App/Views/Store/StoreView.cshtml
@@ -1,6 +1,10 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml"; ;
+}
+
+
 @{
-    ViewData["Title"] = "StoreView";
+    ViewData["Title"] = "Stores";
 }
 
 <h2>StoreView</h2>
