--- a/Boilerplate.Web.App/Views/Customer/CustomerView.cshtml
+++ b/Boilerplate.Web.App/Views/Customer/CustomerView.cshtml
@@ -1,6 +1,8 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml"; ;
+}
 @{
-    ViewData["Title"] = "CustomerView";
+    ViewData["Title"] = "Customers";
 }
 
 <h2>CustomerView</h2>
