--- a/Boilerplate.Web.App/Views/Product/ProductView.cshtml
+++ b/Boilerplate.Web.App/Views/Product/ProductView.cshtml
@@ -1,6 +1,9 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml"; ;
+}
+
 @{
-    ViewData["Title"] = "ProductView";
+    ViewData["Title"] = "Products";
 }
 
 
