--- a/Boilerplate.Web.App/Views/Shared/_Layout.cshtml
+++ b/Boilerplate.Web.App/Views/Shared/_Layout.cshtml
@@ -1,4 +1,32 @@
-﻿
-
-@RenderBody()
-
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="~/semantic/out/semantic.min.css" rel="stylesheet" />
+    
+</head>
+<body>
+    <div class="ui fixed inverted menu ">
+        <div class="ui container">
+            @Html.ActionLink("Customers", "CustomerView", "Customer", null, new { @class = "item" })
+            @Html.ActionLink("Products", "ProductView", "Product", null, new { @class = "item" })
+            @Html.ActionLink("Stores", "StoreView", "Store", null, new { @class = "item" })
+            @Html.ActionLink("Sales", "SaleView", "ProductSold", null, new { @class = "item" })
+        </div>
+    </div>
+    <div class="container body-content">
+        @RenderBody()
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        </footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script src="~/semantic/out/semantic.min.js"></script>
+    @RenderSection("Scripts", required: false)
+</body>
+</html>
